--- a/css/css_grid/lesson_12/index.html
+++ b/css/css_grid/lesson_12/index.html
@@ -4,9 +4,5 @@
 <div class="wrapper">
     <div class="box header">Header</div>
     <div class="box sidebar">Sidebar</div>
-    <div class="box content">Content
-        <br />
-        More content than we had before so this column is quite tall.
-    </div>
-    <div class="box footer">Footer</div>
+    <div class="box content">Content</div>
 </div>
