Task: adding span to columns

--- a/css/css_grid/lesson_16/index.html
+++ b/css/css_grid/lesson_16/index.html
@@ -11,5 +11,5 @@
         <br />
         images inside the content area.
     </div>
-    <div class="box footer">D</div>
+    <div class="box footer">Footer</div>
 </div>
