--- a/css/css_grid/lesson_20/index.html
+++ b/css/css_grid/lesson_20/index.html
@@ -2,16 +2,8 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <div class="wrapper">
-    <div class="box box1">1</div>
-    <div class="box box2">2</div>
-    <div class="box">3</div>
-    <div class="box">4</div>
-    <div class="box">5</div>
-    <div class="box">6</div>
-    <div class="box">7</div>
-    <div class="box">8</div>
-    <div class="box">9</div>
-    <div class="box">10</div>
-    <div class="box">11</div>
-    <div class="box">12</div>
+    <div class="box A">A</div>
+    <div class="box B">B</div>
+    <div class="box C">C</div>
+    <div class="box D">D</div>
 </div>
