--- a/css/css_grid/lesson_20/index.html
+++ b/css/css_grid/lesson_20/index.html
@@ -6,4 +6,5 @@
     <div class="box B">B</div>
     <div class="box C">C</div>
     <div class="box D">D</div>
+    <div class="box E">E</div>
 </div>
