Task: finish repeating track definitions

--- a/css/css_grid/lesson_20/index.html
+++ b/css/css_grid/lesson_20/index.html
@@ -2,9 +2,9 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <div class="wrapper">
-    <div class="box A">A</div>
-    <div class="box B">B</div>
-    <div class="box C">C</div>
-    <div class="box D">D</div>
-    <div class="box E">E</div>
+    <div class="box a">A</div>
+    <div class="box b">B</div>
+    <div class="box c">C</div>
+    <div class="box d">D</div>
+    <div class="box e">E</div>
 </div>
